--- a/PostureCorrector/Base.lproj/Main.storyboard
+++ b/PostureCorrector/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7o6-Jo-0Ty">
-                                <rect key="frame" x="71.000000000000014" y="39.999999999999993" width="248.33333333333337" height="100.33333333333331"/>
+                                <rect key="frame" x="71.000000000000014" y="40" width="248.33333333333337" height="138.33333333333334"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Insert Your Device's IP Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4L-Ya-b5y">
                                         <rect key="frame" x="0.0" y="0.0" width="248.33333333333334" height="20.333333333333332"/>
@@ -92,7 +92,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="xxx.xxx.xxx.x" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dGI-lH-X66">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ex) 172.30.1.7" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dGI-lH-X66">
                                         <rect key="frame" x="0.0" y="28.333333333333343" width="248.33333333333334" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -100,6 +100,18 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KyV-Lv-tMX">
                                         <rect key="frame" x="0.0" y="70.333333333333343" width="248.33333333333334" height="30"/>
                                         <state key="normal" title="Connect"/>
+                                        <connections>
+                                            <action selector="connectServer:" destination="AAn-Bi-TjL" eventType="touchUpInside" id="iSy-UX-93S"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sZR-Rk-24l">
+                                        <rect key="frame" x="0.0" y="108.33333333333334" width="248.33333333333334" height="30"/>
+                                        <state key="normal" title="Disconnect">
+                                            <color key="titleColor" systemColor="systemRedColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="disconnectServer:" destination="AAn-Bi-TjL" eventType="touchUpInside" id="iW1-Ik-TRi"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -112,6 +124,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LMG-Br-CpN"/>
+                    <connections>
+                        <outlet property="connectButton" destination="KyV-Lv-tMX" id="Xco-am-gWL"/>
+                        <outlet property="disconnectButton" destination="sZR-Rk-24l" id="azw-ea-58F"/>
+                        <outlet property="ipAdressTextField" destination="dGI-lH-X66" id="128-QB-QdA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PLf-Be-h7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -320,6 +337,9 @@
         <image name="StartMeasuring_disabled" width="237" height="91"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
